[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali_calendar"
version = "1.0.0"
description = "Utilities for working with Nepali dates"
authors = [{name = "Shiva Thapa", email = "query.shivathapaa.dev@gmail.com"}]
maintainers = [{name = "Shiva Thapa", email = "query.shivathapaa.dev@gmail.com"}]
readme = "README.md"
license = {text = "MPL-2.0"}

requires-python = ">=3.6"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    ]

[project.urls]
Homepage = "https://github.com/shivathapaa/nepali-calendar"
Repository = "https://github.com/shivathapaa/nepali-calendar"
Documentation = "https://github.com/shivathapaa/nepali-calendar"

[tool.setuptools.packages.find]
where = ["src"]