[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nepali_calendar_utils"
version = "2.0.0"
description = "Utilities for working with Nepali dates"
authors = [{name = "Shiva Thapa", email = "query.shivathapaa.dev@gmail.com"}]
maintainers = [{name = "Shiva Thapa", email = "query.shivathapaa.dev@gmail.com"}]
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.7"
dependencies = []
keywords = ["nepali date", "date utilities", "nepali calendar", "nepali date utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/shivathapaa/nepali_calendar_utils"
Documentation = "https://github.com/shivathapaa/nepali_calendar_utils/blob/main/README.md"
Repository = "https://github.com/shivathapaa/nepali_calendar_utils"
"Bug Tracker" = "https://github.com/shivathapaa/nepali_calendar_utils/issues"